--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,9 @@ main:
   - name: Projects
     url: projects/
     weight: 30
+  - name: Blogs
+    url: blogs/
+    weight: 30
   # - name: Teaching
   #   url: teaching/
   #   weight: 40
