--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,8 +22,8 @@ main:
   - name: Projects
     url: projects/
     weight: 30
-  - name: Blogs
-    url: blogs/
+  - name: Flat Curvature
+    url: https://flatcurvature.github.io/
     weight: 30
   # - name: Teaching
   #   url: teaching/
